# orra-trading-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 20260211_00_initial_schema.py  20260211_01_add_tenant_active_and_master_switch.py  20260211_02_add_notification_preferences.py
artifacts/: audit.sh
artifacts/reports/: implementation-plan-artifact.md  security-audit-artifact.md  walkthrough-artifact.md
src/agents/: __init__.py  auth_service.py  health.py  notification_service.py  ticker_service.py
src/api/: main.py  middleware.py
src/api/routes/: __init__.py  account.py  admin.py  billing.py  connections.py  profiles.py  webhooks.py
src/core/: auth.py  billing.py  config.py  context.py  db.py
src/core/repositories/: __init__.py  base.py  kite_credentials.py  notification_preferences.py  trading_profiles.py
src/core/security/: __init__.py  crypto.py  dependencies.py
src/models/: __init__.py  base.py  kite_credential.py  notification_preference.py  strategy_instance.py  tenant.py  trading_profile.py
src/schemas/: __init__.py  account.py  admin.py  billing.py  profile.py  security.py
tests/: test_agents.py  test_api_routes.py  test_auth.py  test_billing_and_webhooks.py  test_data_layer.py  test_repository_tenant_scoping.py  test_security.py
